@@ -36,6 +36,8 @@ New Features:
     org.jamwiki.authentication.RoleImpl class.
   * Run the spam filter against edit comments as well as topic content to
     thwart spam attempts.
+  * Allow parameters to be used when topics not in the template namespace are
+    are utilized as templates.  Example: "{{myTopic|arg1=test1|arg2=test2}}".
   * Remove ability to automatically upgrade from versions prior to 0.7.0.
   * Move the database code into the jamwiki-core project.
   * All unit tests now use HSQL as a test database, rather than the dummy
